--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browserify": "^11.0.1",
     "firebase": "^2.2.9",
     "react": "0.14.2",
+    "react-bootstrap": "0.28.1",
     "react-dom": "0.14.2",
     "reactify": "^1.1.1",
     "tracking": "1.1.1",
