--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "reactify": "^1.1.1",
+    "socket.io-client": "1.3.7",
+    "three-orbit-controls": "72.0.0",
     "uglifyify": "3.0.1",
     "watchify": "^3.3.1"
   }
