--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "browserify": "^11.0.1",
     "firebase": "^2.2.9",
+    "lodash": "3.10.1",
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "reactify": "^1.1.1",
     "socket.io-client": "1.3.7",
+    "stats-js": "1.0.0-alpha1",
     "three-orbit-controls": "72.0.0",
     "uglifyify": "3.0.1",
     "watchify": "^3.3.1"
